# Test_Cross_Compile

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Test_Cross_Compile/: CMakeLists.txt  SocketHelper.h  Test_Cross_Compile.cpp  Test_Cross_Compile.h  Toolchain-RaspberryPi.cmake
